--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,37 @@
-version: '3.8'
+version: "3.8"
 
 services:
   mysql:
-    image: mysql:8.0 
+    image: mysql:8.0
     container_name: mysql_container
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: ${ROOT_PASS} 
-      MYSQL_DATABASE: ${DB_NAME}                 
-    ports:
-      - "3306:3306" 
+      MYSQL_ROOT_PASSWORD: ${ROOT_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
     volumes:
+      - mysql_data:/var/lib/mysql
       - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${ROOT_PASS}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  api:
+    build: ./app
+    container_name: api_container
+    restart: unless-stopped
+    ports:
+      - "${API_PORT}:8000"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    environment:
+      DB_HOST: mysql
+      DB_NAME: ${DB_NAME}
+      DB_USER: root
+      DB_PASSWORD: ${ROOT_PASS}
+
+volumes:
+  mysql_data:
