--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,8 +3,8 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy requirements first for better caching
-COPY ./operation/requirements.txt ./operation/
-RUN pip install --no-cache-dir -r ./operation/requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
@@ -13,4 +13,4 @@ COPY . .
 EXPOSE 8000
 
 # Run with uvicorn
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
