--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,9 @@ services:
       retries: 5
 
   api:
-    build: ./app
+    build:
+      context: ./app
+      dockerfile: Dockerfile
     container_name: api_container
     restart: unless-stopped
     ports:
