--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql_container
-    restart: always
+    restart: unless-stopped
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASS}
