--- a/compose.yaml
+++ b/compose.yaml
@@ -32,7 +32,7 @@ services:
     environment:
       DB_HOST: mysql
       DB_NAME: ${DB_NAME}
-      DB_USER: root
+      DB_USER: ${user}
       DB_PASSWORD: ${ROOT_PASS}
 
 volumes:
